add: main wrapper entry